<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mandatorycatapp.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_button_signin"
        android:orderInCategory="9"
        android:title="Sign in"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_button_signout"
        android:orderInCategory="10"
        android:title="Sign out"
        app:showAsAction="always" />
</menu>